samples/_failures_safe/1761319991_68421f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_889380be.c: In function ‘main’:
./samples/SAFE/__tmp_889380be.c:126:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  126 |     LogBuffer stack_buffer
      |     ^~~~~~~~~
./samples/SAFE/__tmp_889380be.c:126:5: error: expected declaration or statement at end of input
